--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<body>
-    <div id="box">随机点名</div>
-    <span id="span">开始</span>
-</body>
-
+<html>
+    <body>
+        <div id="box">随机点名</div>
+        <span id="span">开始</span>
+    </body>
+</html>
 
 <style>
     #box {
@@ -34,14 +35,18 @@
     span:hover {
       background-color: rgb(7, 122, 143);
     }
-    body
-    {
-        background-image: url(./back.png);
-    }
   </style>
 
 
 <script>
+    window.addEventListener('onorientationchange', setRem);
+    window.addEventListener('resize', setRem);
+    setRem()
+    function setRem() {      
+        var html = document.querySelector('html') 
+        var width = html.getBoundingClientRect().width;
+        html.style.fontSize = width / 16 + 'px'
+    }
     var arr = ['李冠辰', '王文昊', '王瀚霖', '王雨薇', '李波', '杨琮皓', '刘潇楠', '邹臻善', '于建', '何庆', '凌文成', '鲜一卓', '肖名栋', '孙嘉璐', '张清骅', '李一堂', '王琳博', '黄帅', '刘浪', '阳晴', '刘彬', '王志松', '张可欣', '李昕宇', '杨润楠', '柯力', '谢晓薇', '陈冉', '陶旺', '杨小珑']
     var box = document.getElementById("box");
     var span = document.getElementById("span");//获取元素
