--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <body>
         <div id="box">随机点名</div>
         <span id="span">开始</span>
