--- a/index.html
+++ b/index.html
@@ -40,14 +40,19 @@
 
 
 <script>
-    window.addEventListener('onorientationchange', setRem);
-    window.addEventListener('resize', setRem);
-    setRem()
-    function setRem() {      
-        var html = document.querySelector('html') 
-        var width = html.getBoundingClientRect().width;
-        html.style.fontSize = width / 16 + 'px'
-    }
+    !function(n) {
+    var e = n.document,
+    t = e.documentElement,
+    i = 640,
+    d = i / 100,
+    o = "orientationchange" in n ? "orientationchange": "resize",
+    a = function() {
+    var n = t.clientWidth || 320;
+    n > 640 && (n = 640),
+    t.style.fontSize = n / d + "px"
+    };
+    e.addEventListener && (n.addEventListener(o, a, !1), e.addEventListener("DOMContentLoaded", a, !1))
+    } (window);
     var arr = ['李冠辰', '王文昊', '王瀚霖', '王雨薇', '李波', '杨琮皓', '刘潇楠', '邹臻善', '于建', '何庆', '凌文成', '鲜一卓', '肖名栋', '孙嘉璐', '张清骅', '李一堂', '王琳博', '黄帅', '刘浪', '阳晴', '刘彬', '王志松', '张可欣', '李昕宇', '杨润楠', '柯力', '谢晓薇', '陈冉', '陶旺', '杨小珑']
     var box = document.getElementById("box");
     var span = document.getElementById("span");//获取元素
